tests/rosetta/out/Smalltalk/anonymous-recursion-1.out
/tmp/anonymous-recursion-1.st:10: parse error, expected ']'
