tests/rosetta/out/Smalltalk/anonymous-recursion-1.st
" Generated by Mochi compiler v0.10.26 on 2025-07-16T09:48:36Z
"
| a b fib i main t |
fib := [:n | ((n < 2)) ifTrue: [
  n
] .
a := 0.
b := 1.
i := 1.
[(i < n)] whileTrue: [
  t := (a + b).
  a := b.
  b := t.
  i := (i + 1).
]
.
b ].
main := [ | {0. 1. 2. 3. 4. 5. 10. 40. -1} do: [:n |
  ((n < 0)) ifTrue: [
    Transcript show: 'fib undefined for negative numbers'; cr.
  ] ifFalse: [
    Transcript show: (((('fib ' + (n asString)) + ' = ') + (fib value: n asString))) printString; cr.
  ].
]
. ].
main value.
